<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Switch</string>
    <string name="login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="signup">Signup</string>
    <string name="password_here">Password here</string>
    <string name="action_settings">Settings</string>
    <string name="pitch">Give  us your elevator pitch</string>
    <string name="title_activity_splash">Splash</string>
    <string name="splash_text">Splash screen here</string>
    <string name="submit">Submit</string>
    <string name="title_activity_suitors">Suitors</string>
    <string name="list_of_suitors">List of suitors</string>
    <string name="title_activity_onboarding">Onboarding</string>
    <string name="title_activity_signup">Signup</string>
    <string name="username_or_email">Enter username or email</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile_page">Profile page</string>
    <string name="pick_a_dob">Birth date</string>
    <string name="interest">Your interest comes here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="signup_error">Kindly check your signup credentials</string>
    <string name="proposals_made">Proposals made</string>
    <string name="title_activity_signin">Signin</string>
    <string name="express_interest">Express interest</string>
    <string name="yes">Yes</string>
    <string name="welcome">Welcome</string>
    <string name="guy">GUY</string>
    <string name="girl">GIRL</string>
    <string name="no">No</string>
    <string name="action_profile">Profile</string>
    <string name="date">Date</string>
    <string name="proposal_prompt">Accept proposal?</string>
    <string name="action_questions">Questions</string>
    <string name="title_activity_questions">Qestions for you</string>
    <string name="sample_question">Why do you want to date?</string>
    <string name="title_activity_more_details">MoreDetails</string>
    <string name="comfirm_password_here">Confirm password</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="lorem_ipsum">lorem_ipsum</string>
    <string name="action_add_item">add item</string>
    <string name="action_toggle">toggle</string>
    <string name="title_screen_slide">Screen</string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g></string>
    <string name="title_activity_initial">Initial</string>
    <string name="username_here">Username comes here</string>
    <string name="email_here">Email comes here</string>
    <string name="getStarted">Get Started</string>
    <string name="her_pitch">Message for you</string>
    <string name="response_here">Response comes here</string>
    <string name="question_here">Submit your question here</string>
    <string name="ask_question">Pose a question to your suitors</string>
    <string name="privacy_info">We protect your privacy. No information will be shared or posted.</string>
    <string name="title_activity_ask_question">AskQuestion</string>
    <string name="action_ask_question">Pose a question</string>
    <string name="title_activity_candidates">Candidates</string>
    <string name="title_activity_full_image">FullImageActivity</string>
    <string name="like">Like</string>
    <string name="pass">Pass</string>
    <string name="more_details">Tell her something awesome about you</string>
</resources>
