<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.eliagbenu.switchdatingapp.views.Profile"
    android:id="@+id/layout1"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:id="@+id/layout5">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/layout6"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:id="@+id/imageView3"
                android:src="@drawable/profile_pix"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:id="@+id/layout7">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/layout8">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/textViewGender"
                    android:visibility="invisible" />

                <Switch
                    android:id="@+id/switchGender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:textOn="@string/guy"
                    android:textOff="@string/girl"
                    android:textColor="@drawable/toggle_color" />

                <TextView
                    android:id="@+id/textSwitchStatus"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/genderSwitch"
                    android:layout_marginTop="22dp"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/layout9"
                android:layout_weight="1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_a_dob"
                    android:id="@+id/buttonDOB"
                    android:background="@color/button_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Small Text"
                    android:id="@+id/textViewDOB" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:id="@+id/layout2">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editTextPitch"
            android:hint="@string/pitch"
            android:minLines="3" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editTextInterest"
            android:hint="@string/interest"
            android:minLines="2" />

    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/layout4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/buttonCancel"
            android:background="@color/button_color"
            android:layout_alignBottom="@+id/buttonSave"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/buttonSave"
                android:background="@color/button_color"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>
